--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Anish M. Amin</h1>
-    <p class="tagline">Student by day, coffee aficionado by night.</p>
+   <div> <img src="IMG_0182(1).jpg" width="50" height="60"id="mypicture"><h1>Anish M. Amin</h1>
+    <p class="tagline">The unwise discipline others. The wise discipline themselves.</p></div>
     <ul class="bubbles">
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+      <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+      <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+      <li><a href="#"><i class="fa fa-Google"></i></a></li>
     </ul>
   </header>
   <div class="row">
@@ -34,17 +34,17 @@
           </p>
         </li>
         <li>
+          <span class="badge">2012</span>
+          <p>
+            AP Bowl for AP Computer Science<br>
+            Georgia Institute of Technology
+          </p>
+        </li>
+        <li>
           <span class="badge">2016</span>
           <p>
             Intro to Object-Oriented Programming<br>
             CS 1331 at Georgia Institute of Technology
-          </p>
-        </li>
-        <li>
-          <span class="badge">2013</span>
-          <p>
-            Class President<br>
-            Somewhere High School
           </p>
         </li>
       </ul>
@@ -52,10 +52,7 @@
     <div class="col card">
       <h2>Projects</h2>
       <p>
-        Nullam quis risus eget urna mollis ornare vel eu leo.
-        Cras mattis consectetur purus sit amet fermentum.
-        Cum sociis natoque penatibus et magnis dis parturient
-        montes, nascetur ridiculus mus.
+        My first project was creating a ConnectFour game. Furthermore, this is the first webpage I have ever created.
       </p>
     </div>
   </div>
