--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-   <div> <img src="IMG_0182(1).jpg" width="50" height="60"id="mypicture"><h1>Anish M. Amin</h1>
+   <div> <img src="IMG_0182(1).JPG" width="50" height="60"id="mypicture"><h1>Anish M. Amin</h1>
     <p class="tagline">The unwise discipline others. The wise discipline themselves.</p></div>
     <ul class="bubbles">
       <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
