--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Anish M. Amin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
