--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="col card">
       <h2>About Me</h2>
       <p>
-        I third-year undergraduate at the Georgia Institute of Technology, pursuing a major in biochemistry.
+        I third-year undergraduate at the Georgia Institute of Technology, pursuing a major in Computer Science. I just switched my major from Biochemistry after studying it for about 3 years. Computer Science is way more interesting!!!
       </p>
     </div>
     <div class="col card">
